--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -59,7 +59,8 @@
           <div class="form-group" ng-class="{'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty}" ng-if="auth.isReseller() || auth.isRevadmin()">
             <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here accounts the user should be associated with">Account *</label>
             <div class="col-sm-10">
-             <div class="row col-sm-7">
+            <div class="row">
+             <div class="col-sm-7">
               <!-- For "admin" and "user" select only one account-->
                 <span ng-show="!_loading && companies.length==0" class="loader--waite-company" ><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
                 <ui-select ng-if="!_loading && companies.length>0 && model.role !='reseller' &&!!model.companyId" ng-animate-disabled theme="select2" ng-disabled="_loading" ng-model="model.companyId[0]" id="company" name="accountId" on-select="onOneAccountSelect($model)">
@@ -79,10 +80,10 @@
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
                 </div>
                 </div>
-              <div class="form-group col-sm-4">
+              <div class="form-group col-sm-4 visible-lg-block">
                 <a ui-sref="index.accountSettings.companies" class="btn btn-sm btn-primary pull-left" uib-tooltip="Manage Accounts" ng-disabled="_loading"><i class="fa fa-list-alt"></i> Manage Accounts</a>
               </div>
-
+              </div>
             </div>
           </div>
           <div class="form-group" ng-class="{'has-error': editForm.domain.$invalid && editForm.domain.$dirty}">
