--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -62,7 +62,8 @@
                     <div class="form-group" ng-class="{'has-error': createForm.accountId.$invalid && createForm.accountId.$dirty}" ng-if="auth.isReseller() || auth.isRevadmin()">
                         <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here account the user should be associated with">Accounts *</label>
                         <div class="col-sm-10">
-                            <div class="row col-sm-7">
+                        <div class="row">
+                            <div class="col-sm-7">
                               <!-- For "admin" and "user" select only one account-->
                               <span ng-show="!_loading && companies.length==0" class="loader--waite-company" ><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
                               <ui-select ng-if="!_loading && companies.length>0 && model.role !='reseller'"  ng-animate-disabled theme="select2"   ng-disabled="_loading" ng-model="model.companyId[0]" id="company" name="accountId" on-select="onOneAccountSelect($model)">
@@ -79,9 +80,10 @@
                                   </ui-select-choices>
                               </ui-select>
                             </div>
-                            <div class="form-group col-sm-4">
+                            <div class="form-group col-sm-4 visible-lg-block">
                               <a ui-sref="index.accountSettings.companies" class="btn btn-sm btn-primary pull-left" uib-tooltip="Manage Accounts" ng-disabled="_loading"><i class="fa fa-list-alt"></i> Manage Accounts</a>
                             </div>
+                          </div>
                         </div>
                     </div>
                     <div class="form-group" ng-class="{'has-error': createForm.domain.$invalid && createForm.domain.$dirty}">
