--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -109,6 +109,7 @@
 <script type="text/javascript" src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.min.js"></script>
 
 <script type="text/javascript" src="bower_components/highlightjs/highlight.pack.js"></script>
+<script type="text/javascript" src="bower_components/highcharts/modules/no-data-to-display.src.js"></script>
 <script type="text/javascript" src="bower_components/angular-highlightjs/src/angular-highlightjs.js"></script>
 
 <script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
