--- a/code/dev/parts/reports/proxy.html
+++ b/code/dev/parts/reports/proxy.html
@@ -37,17 +37,17 @@
           <div class="row">
             <div class="col-lg-6">
               <div requests-chart
-                   fl-os="os.labels"
-                   fl-device="device.labels"
-                   fl-browser="browser.labels"
+                   fl-os="os"
+                   fl-device="device"
+                   fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"></div>
             </div>
             <div class="col-lg-6">
               <div proxy-traffic-chart
-                   fl-os="os.labels"
-                   fl-device="device.labels"
-                   fl-browser="browser.labels"
+                   fl-os="os"
+                   fl-device="device"
+                   fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"></div>
             </div>
@@ -56,18 +56,18 @@
           <div class="row">
             <div class="col-lg-6">
               <div http-https-chart
-                   fl-os="os.labels"
-                   fl-device="device.labels"
-                   fl-browser="browser.labels"
+                   fl-os="os"
+                   fl-device="device"
+                   fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"></div>
             </div>
             <div class="col-lg-6">
               <div http-status-code-chart
-                   fl-os="os.labels"
-                   status-codes="statusCode.labels"
-                   fl-device="device.labels"
-                   fl-browser="browser.labels"
+                   fl-os="os"
+                   status-codes="statusCode"
+                   fl-device="device"
+                   fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"></div>
             </div>
@@ -76,17 +76,17 @@
           <div class="row">
             <div class="col-lg-6">
               <div request-status-chart
-                   fl-os="os.labels"
-                   fl-device="device.labels"
-                   fl-browser="browser.labels"
+                   fl-os="os"
+                   fl-device="device"
+                   fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"></div>
             </div>
             <div class="col-lg-6">
               <div hits-cache-chart
-                   fl-os="os.labels"
-                   fl-device="device.labels"
-                   fl-browser="browser.labels"
+                   fl-os="os"
+                   fl-device="device"
+                   fl-browser="browser"
                    fl-country="country"
                    ng-domain="domain"></div>
             </div>
