--- a/code/dev/parts/reports/filters/top-objects-filter.html
+++ b/code/dev/parts/reports/filters/top-objects-filter.html
@@ -36,6 +36,14 @@
 
       <div class="form-group">
         <select class="form-control fixed"
+                ng-model="ngFilters.browser"
+                ng-options="item for item in flBrowser">
+          <option value="">All Browsers</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <select class="form-control fixed"
                 style="width: 170px"
                 popover-trigger="mouseenter"
                 uib-popover="Number of top records to report"
