--- a/code/dev/parts/reports/top.html
+++ b/code/dev/parts/reports/top.html
@@ -30,8 +30,9 @@
             <div class="col-md-12">
               <div top-requests
                    fl-os="os"
-                   fl-device="devices"
-                   fl-country="countries"
+                   fl-device="device"
+                   fl-country="country"
+                   fl-browser="browser"
                    ng-domain="domain"></div>
             </div>
           </div>
@@ -40,8 +41,9 @@
             <div class="col-md-12">
               <div top-referer
                    fl-os="os"
-                   fl-device="devices"
-                   fl-country="countries"
+                   fl-device="device"
+                   fl-country="country"
+                   fl-browser="browser"
                    ng-domain="domain"></div>
             </div>
           </div>
@@ -50,8 +52,9 @@
             <div class="col-md-12">
               <div top-cache-miss
                    fl-os="os"
-                   fl-device="devices"
-                   fl-country="countries"
+                   fl-device="device"
+                   fl-country="country"
+                   fl-browser="browser"
                    ng-domain="domain"></div>
             </div>
           </div>
@@ -60,8 +63,9 @@
             <div class="col-md-12">
               <div top-404
                    fl-os="os"
-                   fl-device="devices"
-                   fl-country="countries"
+                   fl-device="device"
+                   fl-country="country"
+                   fl-browser="browser"
                    ng-domain="domain"></div>
             </div>
           </div>
@@ -70,8 +74,9 @@
             <div class="col-md-12">
               <div top-5xx
                    fl-os="os"
-                   fl-device="devices"
-                   fl-country="countries"
+                   fl-device="device"
+                   fl-country="country"
+                   fl-browser="browser"
                    ng-domain="domain"></div>
             </div>
           </div>
@@ -80,8 +85,9 @@
             <div class="col-md-12">
               <div top-failed
                    fl-os="os"
-                   fl-device="devices"
-                   fl-country="countries"
+                   fl-device="device"
+                   fl-country="country"
+                   fl-browser="browser"
                    ng-domain="domain"></div>
             </div>
           </div>
