--- a/code/dev/parts/reports/top/top-5xx.html
+++ b/code/dev/parts/reports/top/top-5xx.html
@@ -4,6 +4,7 @@
      fl-os="flOs"
      fl-country="flCountry"
      fl-device="flDevice"
+     fl-browser="flBrowser"
      ng-filters="filters"
      on-filter="loadDetails()"></div>
 <div class="alert alert-info" ng-if="!_loading && !codes.length">
