--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -200,6 +200,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/resources/model/log_shipping_jobs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_certs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_conf_profiles.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/stagingServers.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/apps.factory.js"></script>
 
 <script type="text/javascript" src="js/portal/auth/auth.module.js"></script>
@@ -266,6 +267,10 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/ssl_certs/ssl_certs.routes.js"></script>
 <script type="text/javascript" src="js/portal/ssl_certs/controller/ssl_certsCrud.controller.js"></script>
 <script type="text/javascript" src="js/portal/ssl_certs/cert-staging-status/certStagingStatus.directive.js"></script>
+
+<script type="text/javascript" src="js/portal/staging-environment/stagingEnvironment.module.js"></script>
+<script type="text/javascript" src="js/portal/staging-environment/stagingEnvironment.routes.js"></script>
+<script type="text/javascript" src="js/portal/staging-environment/controllers/stagingEnvironment.controller.js"></script>
 
 <script type="text/javascript" src="js/portal/companies/companies.module.js"></script>
 <script type="text/javascript" src="js/portal/companies/companies.routes.js"></script>
