--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -75,9 +75,13 @@
                     <i class="sub-menu-icon fa fa-list"></i>
                     Domains
                 </a>
-                  <a id="side-menu-sub-item__webApp-ssl_certs"  ui-sref-active="active" ui-sref="index.webApp.ssl_certs" class="side-menu-sub-item">
+                <a id="side-menu-sub-item__webApp-ssl_certs"  ui-sref-active="active" ui-sref="index.webApp.ssl_certs" class="side-menu-sub-item">
                     <i class="sub-menu-icon fa fa-lock"></i>
                     SSL Certificates
+                </a>
+                <a id="side-menu-sub-item__webApp-staging-environment"  ui-sref-active="active" ui-sref="index.webApp.staging-environment" class="side-menu-sub-item">
+                    <i class="sub-menu-icon fa fa-eye"></i>
+                    Staging Env.
                 </a>
                 <a id="side-menu-sub-item__webApp-cache"ui-sref-active="active" ui-sref="index.webApp.cache" class="side-menu-sub-item">
                     <i class="sub-menu-icon fa fa-trash"></i>
