--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -74,6 +74,8 @@
 <script type="text/javascript" src="bower_components/Chart.js/Chart.js"></script>
 <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
 
+
+<!-- TODO: try to use <script type="text/javascript" src="bower_components/highcharts/highstock.src.js"></script> -->
 <script type="text/javascript" src="bower_components/highcharts/highcharts.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/modules/map.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/highcharts-3d.js"></script>
@@ -200,6 +202,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/resources/model/log_shipping_jobs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_certs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_conf_profiles.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/sslNames.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/stagingServers.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/apps.factory.js"></script>
 
@@ -267,6 +270,10 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/ssl_certs/ssl_certs.routes.js"></script>
 <script type="text/javascript" src="js/portal/ssl_certs/controller/ssl_certsCrud.controller.js"></script>
 <script type="text/javascript" src="js/portal/ssl_certs/cert-staging-status/certStagingStatus.directive.js"></script>
+
+<script type="text/javascript" src="js/portal/ssl_names/ssl_names.module.js"></script>
+<script type="text/javascript" src="js/portal/ssl_names/ssl_names.routes.js"></script>
+<script type="text/javascript" src="js/portal/ssl_names/controller/sslNamesCrud.controller.js"></script>
 
 <script type="text/javascript" src="js/portal/staging-environment/stagingEnvironment.module.js"></script>
 <script type="text/javascript" src="js/portal/staging-environment/stagingEnvironment.routes.js"></script>
