--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -79,6 +79,10 @@
                     <i class="sub-menu-icon fa fa-lock"></i>
                     SSL Certificates
                 </a>
+                <a id="side-menu-sub-item__webApp-ssl_names"  ui-sref-active="active" ui-sref="index.webApp.ssl_names" class="side-menu-sub-item">
+                    <i class="sub-menu-icon fa fa-unlock-alt"></i>
+                    SSL Names
+                </a>
                 <a id="side-menu-sub-item__webApp-staging-environment"  ui-sref-active="active" ui-sref="index.webApp.staging-environment" class="side-menu-sub-item">
                     <i class="sub-menu-icon fa fa-eye"></i>
                     Staging Env.
